--- a/.github/workflows/platformio_ci.yml
+++ b/.github/workflows/platformio_ci.yml
@@ -4,7 +4,7 @@ on: ["push", "pull_request"]
 
 jobs:
   build-and-test:
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout code
