--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ build_flags =
     -lgcov
     -ftest-coverage
     -fprofile-arcs
-    -Wa,-mbig-obj
+    ${sysenv.WINDIR ? "-Wa,-mbig-obj" }
     -Wfatal-errors
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
