--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = teensy41
 framework = arduino
 build_flags = 
     -Wfatal-errors
+    -Wall
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
     adafruit/Adafruit NeoPixel@^1.12.3
@@ -28,8 +29,9 @@ build_flags =
     -lgcov
     -ftest-coverage
     -fprofile-arcs
-    ${sysenv.WINDIR ? "-Wa,-mbig-obj" }
     -Wfatal-errors
+    -Wall
+    ${sysenv.WINDIR ? "-Wa,-mbig-obj" }
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
     fabiobatsilva/ArduinoFake@^0.4.0
