--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,12 @@ platform = teensy
 board = teensy41
 framework = arduino
 build_flags = 
-    -Wfatal-errors
     -Wall
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
     adafruit/Adafruit NeoPixel@^1.12.3
 
-[env:native]
+[env:test]
 platform = native
 build_type = test
 test_framework = googletest
@@ -31,8 +30,13 @@ build_flags =
     -fprofile-arcs
     -Wfatal-errors
     -Wall
-    ${sysenv.WINDIR ? "-Wa,-mbig-obj" }
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
     fabiobatsilva/ArduinoFake@^0.4.0
     google/googletest@^1.15.2
+
+[env:test_windows]
+extends = env:test
+build_flags = 
+    ${env:test.build_flags}
+    -Wa,-mbig-obj
