Steering wheel support

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,13 @@ platform = teensy
 board = teensy41
 framework = arduino
 build_flags = 
-    -Wfatal-errors
+    -Wall
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
     adafruit/Adafruit NeoPixel@^1.12.3
+    https://github.com/ColoradoStateFSAE/dbc
 
-[env:native]
+[env:test]
 platform = native
 build_type = test
 test_framework = googletest
@@ -28,9 +29,16 @@ build_flags =
     -lgcov
     -ftest-coverage
     -fprofile-arcs
-    -Wa,-mbig-obj
     -Wfatal-errors
+    -Wall
 lib_deps = 
     robtillaart/RunningAverage@^0.4.7
     fabiobatsilva/ArduinoFake@^0.4.0
     google/googletest@^1.15.2
+    https://github.com/ColoradoStateFSAE/dbc
+
+[env:test_windows]
+extends = env:test
+build_flags = 
+    ${env:test.build_flags}
+    -Wa,-mbig-obj
