Steering wheel support

--- a/.github/workflows/platformio_ci.yml
+++ b/.github/workflows/platformio_ci.yml
@@ -4,7 +4,7 @@ on: ["push", "pull_request"]
 
 jobs:
   build-and-test:
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout code
@@ -26,15 +26,18 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade platformio gcovr coveralls
+
+      - name: Compile for Teensy
+        run: pio run -e teensy41
         
       - name: Run tests
-        run: pio test -v -e native
+        run: pio test -v -e test
 
       - name: Generate coverage Report
         run: |
-          gcovr -r . --coveralls -o coverage.json `
-            --exclude ".pio" `
-            --exclude "test" `
+          gcovr -r . --coveralls -o coverage.json \
+            --exclude ".pio" \
+            --exclude "test" \
             --exclude "lib/dbc"
 
       - name: Upload to Coveralls
